# VRAG

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_WIKI.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  REPORT_MACMINI.md  SPEC.md  TEST_REPORT.md  TEST_REPORT_5_RUNS.md  docker-compose.mini.yml  docker-compose.yml  patch_draft.py  pyproject.toml  thamkhao.md
.github/workflows/: ablation-smoke.yml  ci.yml
api/: Dockerfile  Dockerfile.mini  main.py  multi_tenant.py  requirements.mini.txt  requirements.txt  routes_v3.py
api/routes/: __init__.py  _admin.py  _chat.py  _chat_stream.py  _health.py  _ingest.py  _prompts.py  _react.py  _utils.py
config/: intent_centroids.npy
dashboard/: Dockerfile  Dockerfile.mini  dashboard.py  panel.py  requirements.mini.txt  requirements.txt  v3_panel.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PIPELINE_FLOW.md  PRODUCTION_PIPELINE.md  README.md  SPEC.md  STRUCTURE.md
eval/datasets/: 1000_prompts_benchmark.json  benchmark_v2.json  multihop_groundtruth_corpus500.json  ragas_groundtruth_corpus500.json  sample_queries_vi.json  vi_benchmark_50.json  vi_benchmark_new10.json  vi_benchmark_subset6.json  vi_benchmark_v1.json  vi_benchmark_v2.json
eval/results/: BENCHMARK_50Q_M4_20260520.md  BENCHMARK_CAITIEN_20260519.md  EVALUATION_REPORT.md  PRODUCT_EVALUATION_REPORT_20260518.md  PRODUCT_EVAL_FULL_20260518.md  ablation_fixed_20260513_161652.json  ablation_full_20260513.json  ablation_full_run3.json  ablation_full_run_20260514_134531.json  ablation_subset6.json  benchmark_report_20260520_000621.md
grafana/provisioning/datasources/: prometheus.yml
nginx/: nginx.conf
plugins/: base.py  registry.py
plugins/sources/api/: plugin.py
plugins/sources/arxiv/: plugin.py
plugins/sources/chat/: __init__.py  plugin.py
plugins/sources/database/: plugin.py
plugins/sources/docx/: plugin.py
plugins/sources/email/: plugin.py
plugins/sources/file/: plugin.py
plugins/sources/github/: plugin.py
plugins/sources/pdf/: plugin.py
plugins/sources/web/: plugin.py
plugins/sources/xlsx/: __init__.py  plugin.py
prometheus/: prometheus.yml
scripts/: _neo4j_json_export.py  ablation_eval.py  backup.sh  benchmark.py  benchmark_eval.py  benchmark_inside.py  benchmark_rag51.py  build_intent_centroids.py  clean_eval.py  community_worker.py  eval_build.py  eval_run.py  ingest_corpus.py  ingest_eval_papers.py  init-neo4j.cypher  init-qdrant.sh  local_vs_global_check.py  migrate_v1_to_v2.py  quick_test_10.py  run_eval_scenarios.py  smoke_test.py  start-ollama.sh  start-rag-mini.sh  stop-rag-mini.sh  v2_smoke_test.py  verify_cosine.py  verify_graph.py
src/: audit.py  clients.py  config.py  metrics.py  models.py  tracing.py
src/reranking/: reranker.py
src/services/: chat_history.py  chunk_quality.py  community.py  config_report.py  consistency.py  context_compress.py  cross_doc.py  cross_encoder.py  doc_type_classifier.py  domain_tagger.py  embedding.py  entity_extractor.py  entity_vectors.py  format_router.py  global_query.py  graph_embeddings.py  hefr_retrieval.py  ingestion.py  ingestion_v2.py  intent_classifier.py  kg.py  ollama_helper.py  ood_detector.py  pii_mask.py  ppr.py  query_router.py  query_understanding.py  react_loop.py  rerank.py  rerank_l2r.py  rerank_stages.py  retrieval.py  retrieval_v2.py  sufficient_context.py  temporal_entities.py  validation.py  vector.py  vector_v2.py
src/services/chunkers/: __init__.py  base.py  chat_chunker.py  docx_chunker.py  multi_signal_chunker.py  pdf_chunker.py  semantic_chunker.py  xlsx_chunker.py
src/storage/: document_store.py
tests/: conftest.py  test_benchmark_script.py  test_community_build_lazy.py  test_entity_resolution.py  test_er_judge.py  test_global_query.py  test_global_router.py  test_global_stream.py  test_hard_limit.py  test_health.py  test_macmini_optimized.py  test_models.py  test_performance.py  test_pipeline.py  test_pipeline_v2.py  test_ppr_dehub.py  test_rag_pipeline.py  test_rrf_kg_scale.py  test_validation_fail_closed.py
